<resources>
    <string name="app_name">PhotoAlbum</string>
    <string name="take_picture">Take Picture</string>
    <string name="private_album">Private</string>
    <string name="public_album"> Public </string>
    <string name="album_name"> Album Name </string>
    <string name="album_description"> Album Description </string>
    <string name="create_button"> Create </string>
    <string name="switch_label">Private or Public?</string>
    <string name="photo_album">Create A Photo Album</string>
    <string name="public_album_label">Public Albums</string>
    <string name="private_album_label">Private Albums</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>

</resources>
